
3)  Added support for --persistent.

4)  Don't do module initialization in an INIT block.

5)  Minor performance improvements.

6)  Add 'clean' target to Makefile.

7)  Redefine 'full' for sub-classes.

8)  Fix log level in rules at the end of INPUT and OUTPUT chains.

9)  Fix nested ipsec zones.

10) Change one-interface sample to IP_FORWARDING=Off.

Changes in Shorewall 4.4.0

1)  Fix 'compile ... -' so that it no longer requires '-v-1'

2)  Fix rule generation for logging nat rules with no exclusion.

3)  Fix log record formatting.

4)  Restore ipset binding

5)  Fix 'upnpclient' with required interfaces.

5)  Fix provider number in masq file.

Changes in Shorewall 4.4.0-RC2

1)  Fix capabilities file with Shorewall6.

2)  Allow Shorewall6 to recognize TC, IP and IPSET

3)  Make 'any' a reserved zone name.

4)  Correct handling of an ipsec zone nested in a non-ipsec zone.

Changes in Shorewall 4.4.0-RC1

1)  Delete duplicate Git macro.

2)  Fix routing when no providers.

3)  Add 'any' as a SOURCE/DEST in rules.

4)  Fix NONAT on child zone.

5)  Fix rpm -U from earlier versions

6)  Generate error on 'status' by non-root.

7)  Get rid of prog.functions and prog.functions6

Changes in Shorewall 4.4.0-Beta4

1)  Add more macros.

2)  Correct broadcast address detection

3) Fix 'show dynamic'

4) Fix BGP and OSFP macros.

5) Change DISABLE_IPV6 default and use 'correct' ip6tables.

Changes in Shorewall 4.4.0-Beta3

1)  Add new macros.

2)  Work around mis-configured interfaces.

3)  Fix 'show dynamic'.

4)  Check for xt_LOG.

5)  Fix 'findgw'

Changes in Shorewall 4.4.0-Beta2

1)  The 'find_first_interface_address()' and
    'find_first_interface_address_if_any()' functions have been restored to
    lib.base.

2)  Integerize r2q before inserting it into 'tc qdisc add root'
    command.

3)  Remove '-h' from the help text for install.sh in Shorewall and
    Shorewall6.

4)  Delete the 'continue' file from the Shorewall package.
