@@ -237,6 +237,10 @@ None.
     the device. Similarly, a warning is issued if the sum of the RATEs
     of a class's sub-classes exceeds the rate of the CLASS.
 
+4)  When 'nets=<network>' or 'nets=(<nets1>,<net2>,...) is specified in
+    /etc/shorewall/interfaces, multicast traffic will now be sent to
+    the zone along with limited broadcasts.
+
 ----------------------------------------------------------------------------
                  N E W   F E A T U R E S   I N   4 . 4
 ----------------------------------------------------------------------------
