@@ -20,6 +20,8 @@ Changes in Shorewall 4.4.1
 
 10) Change one-interface sample to IP_FORWARDING=Off.
 
+11) Allow multicast to non-dynamic zones with nets=.
+
 Changes in Shorewall 4.4.0
 
 1)  Fix 'compile ... -' so that it no longer requires '-v-1'
